Fix crash if soft brush ratio is zero

on linux ratio with size 0 caused Vc to generate incorrect indexes for
the curve lookout values. This is now shielded from the GUI 
limiting min ratio values to 0.01

Also values below 0 are masked out in Vc to avoid other similar crashes

BUG:424468